<resources>
    <string name="app_name">MediCheck</string>

    <string name="timing_morning">Morning</string>
    <string name="timing_noon">Noon</string>
    <string name="timing_night">Night</string>
    <string name="timing_before_sleep">Before Sleep</string>

    <string name="timing_before_breakfast">Before Breakfast</string>
    <string name="timing_before_lunch">Before Lunch</string>
    <string name="timing_before_dinner">Before Dinner</string>

    <string name="timing_after_breakfast">After Breakfast</string>
    <string name="timing_after_lunch">After Lunch</string>
    <string name="timing_after_dinner">After Dinner</string>

    <string name="timing_between_meals_morning">Between meals(Breakfast - Lunch)</string>
    <string name="timing_between_meals_afternoon">Between meals(Lunch - Dinner)</string>

    <string name="person_self">Myself</string>

    <string name="notification_medicine_title">Time of the medicine</string>

    <string name="label_minutes">minutes</string>
    <string name="label_hours">hours</string>
    <string name="label_name">Name</string>
    <string name="label_start_day">Start day</string>
    <string name="label_timetables">Timetables</string>
    <string name="label_take_number">Once of amount</string>
    <string name="label_photo">Photo</string>
    <string name="label_alarm">Alarm</string>
    <string name="label_interval">Interval</string>
    <string name="label_date_number">Days</string>
    <string name="label_add">Register newly</string>
    <string name="label_add_short">Register newly</string>

    <string name="input_title_medicine_name">Medicine Name</string>
    <string name="input_title_medicine_start_day">Start day</string>
    <string name="input_title_medicine_timetables">Timetables</string>
    <string name="input_title_medicine_take_number">Once of amount</string>
    <string name="input_title_medicine_unit">Unit of medicine</string>
    <string name="input_title_medicine_interval">Interval</string>
    <string name="input_title_medicine_date_number">Days</string>

    <string name="button_alarm">Missed prevention alarm</string>
    <string name="button_camera">use a camera</string>
    <string name="button_gallery">choose a picture</string>
    <string name="button_today_medicine">Today\'s Medicine</string>
    <string name="button_description_today_medicine">When you took medicine, click.</string>
    <string name="button_register_medicine">Register Medicine</string>
    <string name="button_description_register_medicine">When you got a medicine, click.</string>
    <string name="button_list_medicine">Medicine List</string>
    <string name="button_description_list_medicine">When you\'d like to remove a medicine, click.</string>
    <string name="button_history_medicine">Medicine Log</string>
    <string name="button_description_history_medicine">When you\'d like to see the history, click.</string>
    <string name="button_setting">Setting</string>
    <string name="button_description_setting">You\'d like to change the person,\n the timetable or the alarm setting, click.</string>
    <string name="button_one_shot">one shot medicine</string>

    <string name="button_register_new_medicine">register NEW medicine</string>
    <string name="button_description_register_new_medicine">You\'d like to register a new medicine, click.</string>
    <string name="button_register_copy_medicine">register COPY medicine</string>
    <string name="button_description_register_copy_medicine">You\'d like to register the medicine you received earlier, click.</string>

    <string name="button_menu">back to menu</string>
    <string name="button_previous_day">prev day</string>
    <string name="button_next_day">next day</string>
    <string name="button_calendar">calendar</string>
    <string name="button_previous_month">prev month</string>
    <string name="button_next_month">next month</string>
    <string name="button_register">Register</string>

    <string name="label_person_name">Person</string>

    <string name="calendar_sun">sun</string>
    <string name="calendar_mon">mon</string>
    <string name="calendar_tue">tue</string>
    <string name="calendar_wed">wed</string>
    <string name="calendar_thu">thu</string>
    <string name="calendar_fri">fri</string>
    <string name="calendar_sat">sta</string>

    <string name="label_days">%1$s days</string>
    <string name="day_1">1st</string>
    <string name="day_2">2nd</string>
    <string name="day_3">3rd</string>
    <string name="day_4_over">%1$sth</string>
    <string name="interval_title_every">every</string>
    <string name="interval_title_day"/>
    <string name="interval_title_days">days</string>
    <string name="interval_title_month">of every month</string>
    <string name="interval_every_day">every day</string>
    <string name="interval_every_other_day">every other days</string>
    <string name="interval_every_few_days">every %1$s days</string>
    <string name="interval_every_month">%1$s of every month</string>

    <string name="interval_minute">%1$s minute</string>
    <string name="interval_hour">%1$s hour</string>
    <string name="interval_minutes">%1$s minutes</string>
    <string name="interval_hours">%1$s hours</string>
    <string name="interval_default">1</string>

    <string name="medicine_unit_1">shot</string>

</resources>
