<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/calendar_view_layout"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/calendar_background"
              android:orientation="vertical"
              android:padding="@dimen/view_padding">

    <!-- date -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/calendar_day_of_week_label_margin"
        android:orientation="horizontal">

        <Button
            android:id="@+id/previous_month_button"
            style="@style/IconTopSmallButtonLeftStyle"
            android:layout_weight="0"
            android:drawableTop="@mipmap/ic_arrow_left"
            android:text="@string/button_previous_month"/>

        <TextView
            android:id="@+id/year_month_label"
            style="@style/BigTextLabelStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="2017/10"
            tools:ignore="HardcodedText"/>

        <Button
            android:id="@+id/next_month_button"
            style="@style/IconTopSmallButtonRightStyle"
            android:layout_weight="0"
            android:drawableTop="@mipmap/ic_arrow_right"
            android:text="@string/button_next_month"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/CalendarSundayDayOfWeekLabelStyle"
            android:text="@string/calendar_sun"/>

        <TextView
            style="@style/CalendarWeekDayDayOfWeekLabelStyle"
            android:text="@string/calendar_mon"/>

        <TextView
            style="@style/CalendarWeekDayDayOfWeekLabelStyle"
            android:text="@string/calendar_tue"/>

        <TextView
            style="@style/CalendarWeekDayDayOfWeekLabelStyle"
            android:text="@string/calendar_wed"/>

        <TextView
            style="@style/CalendarWeekDayDayOfWeekLabelStyle"
            android:text="@string/calendar_thu"/>

        <TextView
            style="@style/CalendarWeekDayDayOfWeekLabelStyle"
            android:text="@string/calendar_fri"/>

        <TextView
            style="@style/CalendarSaturdayDayOfWeekLabelStyle"
            android:layout_marginEnd="@dimen/calendar_border_width"
            android:layout_marginRight="@dimen/calendar_border_width"
            android:text="@string/calendar_sat"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/week_row_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"/>
</LinearLayout>