<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:custom="http://schemas.android.com/apk/res-auto"
              android:theme="@style/StandardViewTheme"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <com.studiojozu.medicheck.activity.uicomponent.DescriptionButtonView
        android:id="@+id/menu_button_today_medicine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        custom:text="@string/button_today_medicine"
        custom:description="@string/button_description_today_medicine"
        custom:drawableLeft="@mipmap/ic_take_parson"/>

    <com.studiojozu.medicheck.activity.uicomponent.DescriptionButtonView
        android:id="@+id/menu_button_register_medicine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        custom:text="@string/button_register_medicine"
        custom:description="@string/button_description_register_medicine"
        custom:drawableLeft="@mipmap/ic_register_medicine"/>

</LinearLayout>
