<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:custom="http://schemas.android.com/apk/res-auto"
              style="@style/StandardViewStyle"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:theme="@style/AppTheme">

    <com.studiojozu.medicheck.resource.uicomponent.button.DescriptionButtonView
        android:id="@+id/register_new_medicine_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        custom:description="@string/button_description_register_new_medicine"
        custom:drawableLeft="@mipmap/ic_register_medicine"
        custom:text="@string/button_register_new_medicine"/>

    <com.studiojozu.medicheck.resource.uicomponent.button.DescriptionButtonView
        android:id="@+id/register_copy_medicine_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        custom:description="@string/button_description_register_copy_medicine"
        custom:drawableLeft="@mipmap/ic_copy_medicine"
        custom:text="@string/button_register_copy_medicine"/>

</LinearLayout>